projects/compiler/test/parser/typedecl_error_bad_trait.4.out
Error at %FILE_NAME%:1:21
Unexpected token '?':
  |  type FooBar123 : Foo? {
                         ^