projects/compiler/test/parser/typedecl_error_bad_trait.4.abra
type FooBar123 : Foo? {

}
